@@ -29,8 +29,6 @@ SUBDIRS += plugins/indicator/ATR
 SUBDIRS += plugins/indicator/BB
 SUBDIRS += plugins/indicator/CCI
 SUBDIRS += plugins/indicator/CMO
-#SUBDIRS += plugins/indicator/COMP
-#SUBDIRS += plugins/indicator/COUNTER
 SUBDIRS += plugins/indicator/CUS
 SUBDIRS += plugins/indicator/DMI
 SUBDIRS += plugins/indicator/DPO
@@ -39,13 +37,11 @@ SUBDIRS += plugins/indicator/LMS
 SUBDIRS += plugins/indicator/MA
 SUBDIRS += plugins/indicator/MACD
 SUBDIRS += plugins/indicator/MAOSC
-#SUBDIRS += plugins/indicator/MATH
 SUBDIRS += plugins/indicator/MF
 SUBDIRS += plugins/indicator/MINMAX
 SUBDIRS += plugins/indicator/MOM
 SUBDIRS += plugins/indicator/PER
 SUBDIRS += plugins/indicator/PP
-#SUBDIRS += plugins/indicator/REF
 SUBDIRS += plugins/indicator/ROC
 SUBDIRS += plugins/indicator/RSI
 SUBDIRS += plugins/indicator/SAR
